# chip8

./: .gitattributes  .gitignore  README.md  meson.build  meson_options.txt
examples/: ibm-logo.c  loop.c  meson.build  nop.c
images/: test_opcode.ch8
include/: chip8-ops.h  chip8.h  logging.h  ui.h  utils.h
src/: chip8-sdt.d  chip8.c  main.c  meson.build  sdlui.c  termui.c  ui.c
subprojects/: sdl2.wrap
tests/: meson.build  test-chip8.c  test-opcode.c
