project('chip8', 'c', version: '0.0.1')

inc = include_directories(['.', 'include'], is_system: false)

#conf = configuration_data({
#  'VERSION': '"@0@"'.format(meson.project_version()),
#})
#configure_file(output: 'config.h', configuration: conf)

subdir('src')
#subdir('tests')
#subdir('examples')
